Fix Spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -619,7 +619,6 @@ a {
     font-size: 15px;
     color: #CFCFCF;
     border: 1px solid #fff;
-    padding: 18px 28px;
 }
 
 /* RESPONSIVE */
